--- a/src/components/layout/Sidebar/Sidebar.module.scss
+++ b/src/components/layout/Sidebar/Sidebar.module.scss
@@ -3,7 +3,7 @@
 
 .sidebar {
     width: 280px;
-    height: 100vh;
+    height: 100dvh;
     background: $white;
     border-right: 1px solid $border-color;
     display: flex;
