--- a/src/components/layout/AdminLayout/AdminLayout.module.scss
+++ b/src/components/layout/AdminLayout/AdminLayout.module.scss
@@ -4,28 +4,41 @@
 .layout {
     display: flex;
     min-height: 100vh;
+    min-height: 100dvh; // Better mobile support
+    width: 100%;
+    max-width: 100vw;
+    overflow-x: hidden;
     background: $slate-50;
+    position: relative;
 }
 
 .mainContent {
     flex: 1;
+    min-width: 0; // Prevents flex item from overflowing
     margin-left: 280px; // Sidebar width
     display: flex;
     flex-direction: column;
     transition: margin 0.3s ease;
+    width: calc(100% - 280px);
 
-    @include mobile {
+    @include mobile-tablet {
         margin-left: 0;
+        width: 100%;
     }
 }
 
 .pageContent {
     padding: $gap-lg;
-    max-width: 1400px;
     width: 100%;
+    max-width: 100%;
     margin: 0 auto;
+    box-sizing: border-box;
+
+    @include tablet {
+        padding: $gap-md;
+    }
 
     @include mobile {
-        padding: $gap-md;
+        padding: $gap-sm;
     }
 }
