--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -40,13 +40,67 @@
 }
 
 @mixin mobile {
-    @media (max-width: 640px) {
+    @media (max-width: 768px) {
         @content;
     }
 }
 
 @mixin tablet {
+    @media (min-width: 769px) and (max-width: 1024px) {
+        @content;
+    }
+}
+
+@mixin mobile-tablet {
     @media (max-width: 1024px) {
         @content;
     }
+}
+
+
+@mixin customScroll {
+  /* Vertical Scrollbar */
+  &::-webkit-scrollbar {
+    width: 5px;
+    height: 5px; /* Ensure the horizontal scrollbar is also styled */
+  }
+
+  /* Track */
+  &::-webkit-scrollbar-track {
+    background: #f4f4f4;
+    border-radius: 60px;
+  }
+
+  /* Handle */
+  &::-webkit-scrollbar-thumb {
+    background: #d9d9d9;
+    border-radius: 60px;
+  }
+
+  /* Handle on hover */
+  &::-webkit-scrollbar-thumb:hover {
+    background: #a5a3a3;
+  }
+
+  /* Horizontal Scrollbar */
+  &::-webkit-scrollbar:horizontal {
+    height: 5px;
+  }
+
+  /* Horizontal Track */
+  &::-webkit-scrollbar-track:horizontal {
+    background: #f4f4f4;
+    border-radius: 60px;
+  }
+
+  /* Horizontal Handle */
+  &::-webkit-scrollbar-thumb:horizontal {
+    background: #d9d9d9;
+    border-radius: 60px;
+  }
+
+  /* Horizontal Handle on hover */
+  &::-webkit-scrollbar-thumb:horizontal:hover {
+    background: #a5a3a3;
+  }
 }
