Added machine owner page and design approval page

--- a/src/components/common/Card/Card.module.scss
+++ b/src/components/common/Card/Card.module.scss
@@ -16,6 +16,10 @@
         padding: $gap-sm;
         border-radius: $radius-lg;
     }
+
+    &.noPadding {
+        padding: 0 !important;
+    }
 }
 
 .title {
