--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -24,6 +24,23 @@ $slate-700: #334155;
 $slate-800: #1e293b;
 $slate-900: #0f172a;
 
+// Neutral Aliases
+$neutral-50: $slate-50;
+$neutral-100: $slate-100;
+$neutral-200: $slate-200;
+$neutral-300: $slate-300;
+$neutral-400: $slate-400;
+$neutral-500: $slate-500;
+$neutral-600: $slate-600;
+$neutral-700: $slate-700;
+$neutral-800: $slate-800;
+$neutral-900: $slate-900;
+
+// Extended Semantic Colors
+$primary-700: darken($primary-600, 5%);
+$success-600: darken($success-500, 5%);
+$danger-600: darken($danger-500, 5%);
+
 $white: #ffffff;
 $black: #000000;
 
